# geothermal

./: .gitignore  pyproject.toml  readme.md
opcua-server/: requirements.txt  server.py
parameter-estimation/: parameter_estimation.ipynb  parameter_estimation_pyomo_example.py  pyomo_parameter_estimation_example.ipynb  reactor_data.csv
t0_sklearn/: data_exploration.ipynb  other_pairplots.ipynb
t1_hx/: model.py  test.py
